--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -106,16 +106,34 @@
             app:layout_constraintTop_toBottomOf="@+id/viewLayout2"
             tools:ignore="MissingConstraints" />
 
-        <ImageView
-            android:id="@+id/imageOrVideoView"
+        <FrameLayout
+            android:id="@+id/imageOrVideoLayout"
             android:layout_width="match_parent"
             android:layout_height="400dp"
-            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/datePicker">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/ic_image_black_24dp"
             android:scaleType="fitXY"
-            app:layout_constraintTop_toBottomOf="@+id/datePicker" />
+            android:visibility="gone"/>
+
+        <ImageView
+            android:id="@+id/videoView"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/ic_play_circle_outline_black_24dp"
+            android:scaleType="fitXY"
+            android:visibility="gone"/>
+        </FrameLayout>
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -124,64 +142,65 @@
             android:visibility="gone"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageOrVideoView" />
+            app:layout_constraintTop_toBottomOf="@+id/imageOrVideoLayout" />
 
+        <FrameLayout
+            android:id="@+id/frameLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/progressBar">
 
-        <ImageView
-            android:id="@+id/zoomPhoto"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="20dp"
-            android:visibility="gone"
-            android:background="@drawable/ic_zoom_in_black_24dp"
-            app:layout_constraintTop_toBottomOf="@+id/progressBar"
-            app:layout_constraintRight_toRightOf="parent"/>
+            <ImageView
+                android:id="@+id/zoomPhoto"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="right"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/ic_zoom_in_black_24dp"
+                android:visibility="gone" />
 
-        <ImageView
-            android:id="@+id/playVideo"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="20dp"
-            android:visibility="gone"
-            android:background="@drawable/ic_play_circle_outline_black_24dp"
-            app:layout_constraintTop_toBottomOf="@+id/progressBar"
-            app:layout_constraintRight_toRightOf="parent"/>
+            <ImageView
+                android:id="@+id/playVideo"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="right"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/ic_play_circle_outline_black_24dp"
+                android:visibility="gone" />
+        </FrameLayout>
 
-            <LinearLayout
-                android:id="@+id/linearLayoutDescription"
-                android:layout_width="match_parent"
+        <LinearLayout
+            android:id="@+id/linearLayoutDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/frameLayout">
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:layout_marginLeft="20dp"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="@string/description"
+                android:textAllCaps="true"
+                android:textColor="@android:color/black"
+                android:textSize="24sp"
+                android:textStyle="bold"/>
 
-                app:layout_constraintTop_toBottomOf="@+id/zoomPhoto">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:gravity="center"
-                    android:text="@string/description"
-                    android:textAllCaps="true"
-                    android:textColor="@android:color/black"
-                    android:textSize="24sp"
-                    android:textStyle="bold"
-                    android:padding="5dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/progressBar" />
-
-                <TextView
-                    android:id="@+id/description"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:gravity="left"
-                    android:padding="5dp"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp" />
-            </LinearLayout>
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:gravity="left"
+                android:padding="5dp"
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
